--- a/assets/style.css
+++ b/assets/style.css
@@ -3,20 +3,23 @@ h1{
     background-color: blue;
     color: white;
     font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
 }
 
 #search-text {
     font-size: 35px;
     font-weight: bolder;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #search-button{
     width: 258px;
     background-color: rgb(41, 141, 223);
     color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.searchCity{
+#searchCity{
     width: 250px;
 
 }
@@ -26,21 +29,29 @@ h1{
     padding-left: 350px;
     font-size: 30px;
     font-weight: bold;
+    padding-top: 200px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 #inf-weather{
     display: flex;
     padding-left: 350px;
-
-    
-    
-    
+   
+ 
 }
 
 #weather-container1, #weather-container2, #weather-container3, #weather-container4, #weather-container5 {
     text-align: center;
     background-color: blue;
-    width: 150px;
+    width: 250px;
+    height: 250px;
     border-color: white;
-    border-spacing: 100px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-style:solid;
+    border-width: 20px;
+   
+   
 
+}
+#weather-container1{
+    border-spacing: 20px;
 }
