--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,7 @@ h1{
     color: white;
     font-weight: bold;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  
     
 }
 
@@ -11,6 +12,7 @@ h1{
     font-size: 35px;
     font-weight: bolder;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
 }
 
 #search-button{
@@ -18,23 +20,26 @@ h1{
     background-color: rgb(41, 141, 223);
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
+    
 }
 #searchCity{
     width: 250px;
+    height: 25px;
 
 }
 
 #forcast-text{
     text-align: left;
-    padding-left: 350px;
+    padding-left: 270px;
     font-size: 30px;
     font-weight: bold;
-    padding-top: 200px;
+    padding-top: 40px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 #inf-weather{
     display: flex;
-    padding-left: 350px;
+    padding-left: 252px;
    
  
 }
@@ -54,4 +59,26 @@ h1{
 }
 #weather-container1{
     border-spacing: 20px;
+}
+
+#main-container{
+    text-align: left;
+    border: 2px;
+    border-style: solid;
+    width: 1400px;
+    height: 250px;
+}
+
+#main-inf-weather{
+    padding-left: 270px;
+    
+}
+#left-col{
+    position: absolute;
+}
+
+#Name-city{
+    font-size: 25px;
+    font-weight: bolder;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
