--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,8 @@ h1{
 }
 #inf-weather{
     display: flex;
-    padding-left: 252px;
+    padding-left: 270px;
+    gap: 79px;
    
  
 }
@@ -47,26 +48,21 @@ h1{
 #weather-container1, #weather-container2, #weather-container3, #weather-container4, #weather-container5 {
     text-align: center;
     background-color: blue;
-    width: 250px;
+    width: 220px;
     height: 250px;
-    border-color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    border-style:solid;
-    border-width: 20px;
-   
-   
+     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
-}
-#weather-container1{
-    border-spacing: 20px;
 }
 
 #main-container{
     text-align: left;
     border: 2px;
     border-style: solid;
-    width: 1400px;
-    height: 250px;
+    width: 1480px;
+    height: 340px;
+    font-size: 17px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bolder; 
 }
 
 #main-inf-weather{
@@ -74,11 +70,15 @@ h1{
     
 }
 #left-col{
-    position: absolute;
+    
 }
 
 #Name-city{
     font-size: 25px;
     font-weight: bolder;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#imageicon{
+    background-color: rgb(218, 211, 211);
 }
