--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,10 @@
 h1{
     text-align: center;
-    background-color: blue;
+    background-color: rgb(9, 9, 112);
     color: white;
     font-weight: bold;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  
+    
     
 }
 
@@ -12,6 +12,8 @@ h1{
     font-size: 35px;
     font-weight: bolder;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    flex: inherit;
+    
     
 }
 
@@ -46,15 +48,19 @@ h1{
 }
 
 #weather-container1, #weather-container2, #weather-container3, #weather-container4, #weather-container5 {
-    text-align: center;
-    background-color: blue;
+    text-align: left;
+    word-spacing: 10px;
+    padding-left: 8px;
+    background-color: rgb(9, 9, 112);
     width: 220px;
     height: 250px;
      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+     color: honeydew;
 
 }
 
 #main-container{
+   
     text-align: left;
     border: 2px;
     border-style: solid;
@@ -63,14 +69,18 @@ h1{
     font-size: 17px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bolder; 
+    padding-left: 20px;
 }
 
 #main-inf-weather{
     padding-left: 270px;
+    display: flex;
     
 }
-#left-col{
+#left{
+    display: flex;
     
+    ;
 }
 
 #Name-city{
